# mai_os

./: Makefile  README.md  child.c  parent.c
base/: README.md
base/common/code/common/: CMakeLists.txt  comm.h  defines.h  errors.cpp
base/common/code/multithread/: CMakeLists.txt  mt.h  mt_win.cpp  thread.cpp  thread.h
base/common/code/os/: CMakeLists.txt  os.h  os_win.cpp  os_win.h
fork+create_process/: fork.c  pipe.c
fork+create_process/CreateProcessAndPipe/CreateProcess/: CreateProcess.sln
fork+create_process/CreateProcessAndPipe/CreateProcess/ChildProcess/: ChildProcess.cpp  ChildProcess.vcxproj  ChildProcess.vcxproj.filters
fork+create_process/CreateProcessAndPipe/CreateProcess/CreateProcess/: CreateProcess.cpp  CreateProcess.vcxproj  CreateProcess.vcxproj.filters
lab1/: .gitignore  BUILD.md  CMakeLists.txt  README.md  test_numbers.txt
lab1/common/: CMakeLists.txt  defines.h  errors.cpp  errors.hpp
lab1/src/: CMakeLists.txt  child.cpp  parent.cpp
lab2/: .gitignore  BUILD.md  CMakeLists.txt  QUICKSTART.md  README.md  build_graphs.py  rebuild.ps1  test_matrix.txt  test_performance.ps1
lab2/common/: CMakeLists.txt  comm.h  errors.h
lab2/src/: CMakeLists.txt  main.cpp  median_filter.cpp  median_filter.h
lab3/: BUILD.md  CMakeLists.txt  KEY_DIFFERENCES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  rebuild.ps1
lab3/common/: CMakeLists.txt  defines.h  errors.h
lab3/src/: CMakeLists.txt  child.cpp  parent.cpp
lab4/: .gitignore  CMakeLists.txt  README.md
lab4/common/: CMakeLists.txt  defines.h  errors.cpp  errors.h  errors.hpp
lab4/src/: program1.cpp  program2.cpp  quicksort.cpp  rectangles.cpp  trapezoids.cpp
report/: README.md
report/inc/: bubble_sort.cpp  child.cpp  comm.h  defines.h  errors.cpp  errors.h  errors.hpp  integral_interface.h  main.cpp  median_filter.cpp  median_filter.h  parent.cpp  program1.cpp  program2.cpp  rectangles.cpp  sort_interface.h  trapezoids.cpp
report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
